--- a/package.json
+++ b/package.json
@@ -4,23 +4,34 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "tes": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "autoprefixer": "^10.4.19",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
+    "cookie-session": "^2.1.0",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "express-openid-connect": "^2.17.1",
+    "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.7.0",
     "mongoose": "^8.3.3",
     "nodemailer": "^6.9.13",
     "otp-generator": "^4.0.1",
-    "randomstring": "^1.3.0"
+    "passport": "^0.7.0",
+    "passport-google-oauth2": "^0.2.0",
+    "passport-google-oauth20": "^2.0.0",
+    "postcss": "^8.4.39",
+    "postcss-cli": "^11.0.0",
+    "randomstring": "^1.3.0",
+    "tailwindcss": "^3.4.4",
+    "uuid": "^10.0.0"
   }
 }
