--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "license": "ISC",
   "dependencies": {
     "autoprefixer": "^10.4.19",
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "cookie-session": "^2.1.0",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
@@ -33,6 +35,8 @@
     "postcss": "^8.4.39",
     "postcss-cli": "^11.0.0",
     "randomstring": "^1.3.0",
+    "sha256": "^0.2.0",
+    "stripe": "^16.12.0",
     "tailwindcss": "^3.4.4",
     "uuid": "^10.0.0"
   },
